--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Repo practise</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Sejan</h1>
     <h2>Sajal</h2>
+    <h3>Babu</h3>
 </body>
 </html>
