--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Sejan</h1>
-    <h2>Sajal</h2>
+    <h1>Sejan mahmud</h1>
+    <h2>Sajal islam</h2>
     <h3>Babu</h3>
 </body>
 </html>
